--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "swiper": "^9.0.5",
     "web-vitals": "^2.1.4"
   },
