--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-query": "^4.24.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "daisyui": "^2.51.0",
+    "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.2",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
     "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
